--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
 <body>
   <!-- My Google font is in my Style.css -->
   <h1>Beat Shazam</h1> <!-- Title of Page -->
-  <script src="js/vendor/jquery.min.js" crossorigin="anonymous"></script>
-  <script src="js/script.js"></script>
+  <input type="text" id="song-input">
+  <input type="button" value="submit" id="submit">
+ 
+  <script src="script.js"></script>
 </body>
 </html>
