put index in a form

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,12 @@
 <body>
   <!-- My Google font is in my Style.css -->
   <h1>Beat Shazam</h1> <!-- Title of Page -->
-  <input type="text" id="song-input">
-  <input type="button" value="submit" id="submit">
+  <form>
+    <input type="text" id="song-input">
+    <input type="button" value="submit" id="submit">
+
+  </form>
+  
  
   <script src="script.js"></script>
 </body>
