added placeholder text to input

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <!-- My Google font is in my Style.css -->
   <h1>Beat Shazam</h1> <!-- Title of Page -->
   <form>
-    <input type="text" id="song-input">
+    <input type="text" id="song-input" placeholder="Artist name...">
     <input type="button" value="submit" id="submit">
 
   </form>
