put stuff in a container + added an event listener

--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,16 @@
   <h1>Beat Shazam</h1> <!-- Title of Page -->
 
 
-  <form>
-    <input type="text" id="song-input" placeholder="Artist name...">
-    <input type="button" value="submit" id="submit">
+  <div id="container">
+    <form>
+      <input type="text" id="song-input" placeholder="Artist name...">
+      <input type="button" value="submit" id="submitButton">
 
-  </form>
-  
+    </form>
+  </div>
  
+  <script src="js/vendor/jquery.min.js" crossorigin="anonymous"></script>
   <script src="script.js"></script>
+
 </body>
 </html>
