set up playlist a bit

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
   <div id="container">
     <form>
-      <input type="text" id="song-input" placeholder="Artist name...">
+      <input type="text" id="playlist-url-box" placeholder="Playlist URL...">
       <input type="button" value="submit" id="submitButton">
 
     </form>
