--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <h1>Beat Shazam</h1> <!-- Title of Page -->
   <input type="text" id="song-input">
   <input type="button" value="submit" id="submit">
- 
+  <script src="jquery.min.js" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
 </html>
