--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     </form>
   </div>
  
-  <script src="js/vendor/jquery.min.js" crossorigin="anonymous"></script>
+  <script src="jquery.min.js" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 
 </body>
