changed to using module

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   </div>
  
   <script src="jquery.min.js" crossorigin="anonymous"></script>
-  <script src="script.js"></script>
+  <script  type="module" src="script.js"></script>
 
 </body>
 </html>
