--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <div id="container">
     <form>
       <input type="text" id="playlist-url-box" placeholder="Playlist URL...">
-      <input type="button" value="submit" id="submitButton"> <!-- put in the playlist url... the game part is constructed with ajax -->
+      <input type="button" value="Submit" id="submitButton"> <!-- put in the playlist url... the game part is constructed with ajax -->
 
     </form>
   </div>
