changed append statement to hidden html element

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,17 @@
 
     </form>
   </div>
+
+  <div hidden id="part-2-container">
+    <p>Next Step</p> 
+        <audio controls id='testSongId'>
+          <source src="" type="audio/mp3" id="songFile">
+      </audio> 
+      <table id='guessingTable'>
+
+
+      </table>
+  </div>
  
   <script src="jquery.min.js" crossorigin="anonymous"></script>
   <script type="module" src="script.js"></script>
