--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
           <source src="" type="audio/mp3" id="songFile">
       </audio> 
       <table id='guessingTable'>
-
+        <thead> <th>Song Title</th><th>Artist</th><th>Year</th></thead>
 
       </table>
   </div>
