guessing logic works

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
         <audio controls id='testSongId'>
           <source src="" type="audio/mp3" id="songFile">
       </audio> 
+      <input type="text" id="guess">
+      <input type="button" value="Submit" id="guessButton">
       <table id='guessingTable'>
         <thead> <th>Song Title</th><th>Artist</th><th>Year</th></thead>
 
