prepped a few things to set up multiple rounds

--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,16 @@
         <audio controls id='testSongId'>
           <source src="" type="audio/mp3" id="songFile">
       </audio> 
-      <input type="text" id="guess">
-      <input type="button" value="Submit" id="guessButton">
+      
       <table id='guessingTable'>
         <thead> <th>Song Title</th><th>Artist</th><th>Year</th></thead>
+        <tbody> <td id="table-songtitle">???</td><td id="table-artistname">???</td><td id="table-year">???</td></tbody>
 
       </table>
+
+      <input type="text" id="guess">
+      <input type="button" value="Submit" id="guessButton">
+
   </div>
 </div>
  
