added thumbnail and blur effect

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       </audio> 
       <input type="text" id="guess">
       <input type="button" value="Submit" id="guessButton">
+      <img src="" alt="" id="thumbnail">
       <table id='guessingTable'>
         <thead> <th>Song Title</th><th>Artist</th><th>Year</th></thead>
 
