--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
           <source src="" type="audio/mp3" id="songFile">
       </audio> 
       <input type="text" id="guess">
-      <input type="button" value="Submit" id="guessButton">
+      <input type="button" value="Submit" id="submitButton">
       <img src="" alt="" id="thumbnail">
       <table id='guessingTable'>
         <thead> <th>Song Title</th><th>Artist</th><th>Year</th></thead>
