started setting up round 2

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
 
       
       <table id='guessingTable'>
-        <thead> <th>Song Title</th><th>Artist</th><th>Year</th></thead>
-        <tbody> <td id="table-songtitle">???</td><td id="table-artistname">???</td><td id="table-year">???</td></tbody>
+        <thead> <th>Artist</th><th>Song Title</th><th>Year</th></thead>
+        <tbody> <td id="table-artistname">???</td><td id="table-songtitle">???</td><td id="table-year">???</td></tbody>
 
       </table>
 
