added html elements for scoring

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,12 @@
 
     </p>
   </div>
-
+  <div hidden id="scoreboard">
+    <p id="score"></p>
+    <p id="guesses"></p>
+  </div>
   <div hidden id="part-2-container">
-
+  
         <audio controls id='testSongId'>
           <source src="" type="audio/mp3" id="songFile">
       </audio> 
