--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
   <!-- My Google font is in my Style.css -->
   <h1>Beat Shazam</h1> <!-- Title of Page -->
   
-
+<div hidden id="scoreboard">
+  <p id="score">100</p>
+  <p id="round">Round 1</p>
+</div>
 <div id = cc>
   
   <div id="container">
@@ -21,10 +24,7 @@
 
     </p>
   </div>
-  <div hidden id="scoreboard">
-    <p id="score"></p>
-    <p id="guesses"></p>
-  </div>
+  
   <div hidden id="part-2-container">
   
         <audio controls id='testSongId'>
