--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
   <h1>Beat Shazam</h1> <!-- Title of Page -->
   
 <div hidden id="scoreboard">
-  <p id="score">100</p>
-  <p id="round">Round 1</p>
+  <p id="score"></p>
 </div>
 <div id = cc>
   
