minor changes to gamelost screen

--- a/public/gamelost.html
+++ b/public/gamelost.html
@@ -39,6 +39,7 @@
     </script> -->
     <div class="lostGame">
         <h1 style="color: white; font-size: 50px;">You Lost The Game</h1>
+        <p id="gameScore"></p>
         <a href="javascript:window.opener.location.reload(true);self.close();">
             <button >Try again?</button>
         </a>
