cleaned up index + added alt text

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- My Google font is in my Style.css -->
+
   <h1>Beat Shazam</h1> <!-- Title of Page -->
   
 <div hidden id="scoreboard">
@@ -20,7 +20,7 @@
 
     <p>
       <input type="text" id="playlist-url-box" placeholder="Playlist URL...">
-      <input type="button" value="Submit" id="submitButton"> <!-- put in the playlist url... the game part is constructed with ajax -->
+      <input type="button" value="Submit" id="submitButton"> 
 
     </p>
   </div>
@@ -40,7 +40,7 @@
 
       <input type="text" id="guess">
       <input type="button" value="Submit" id="guessButton">
-      <img src="" alt="" id="thumbnail">
+      <img src="" alt="Mystery song's thumbnail" id="thumbnail">
       <p></p>
 
       
