fixed alignment of stars for final page

--- a/public/gameScore.html
+++ b/public/gameScore.html
@@ -64,7 +64,7 @@
         </p>
 
         <table id="ratings" align="center">
-            <thead><th>Artist</th><th>Song Title</th><th>Year</th></thead>
+            <thead><th>Artist</th><th>Title</th><th>Year</th></thead>
             <tbody>
                 <tr>
                     <td>
